# dp

./: .gitmodules  CMakeLists.txt  LICENCE  README.md  apiary.apib  batch.lua  builder.lua  choose.lua  cifar10.lua  command.lua  confusion.lua  dataset.lua  datasource.lua  datatensor.lua  dp-scm-1.rockspec  eidgenerator.lua  evaluator.lua  experiment.lua  feedback.lua  hyperoptimizer.lua  init.lua  languagemodeltutorial.md  logger.lua  master.lua  mediator.lua  mkdocs.yml  mnist.lua  model.lua  module.lua  multinomial.c  multinomial.lua  node.lua  objectid.lua  observer.lua  optimizer.lua  postgres.lua  preprocess.lua  propagator.lua  query.lua  sampler.lua  (+9 more)
async/: command.lua  parallelproxy.lua  station.lua
data/: CMakeLists.txt  baseset.lua  basetensor.lua  batch.lua  billionwords.lua  carry.lua  cifar10.lua  cifar100.lua  classtensor.lua  cocoboxdetect.lua  cocodetect.lua  cocodetectset.lua  compositetensor.lua  conv2d.lua  dataset.lua  datasource.lua  datatensor.lua  facedetection.lua  facialkeypoints.lua  imageclassset.lua  imagenet.lua  imagesource.lua  imagetensor.lua  mnist.lua  notmnist.lua  penntreebank.lua  preprocess.lua  sampler.lua  sentenceset.lua  sequencetensor.lua  smallimagesource.lua  svhn.lua  textset.lua  textsource.lua  translatedmnist.lua  wordtensor.lua
doc/: data.md  datatutorial.md  experiment.md  facialkeypointstutorial.md  feedback.md  index.md  languagemodeltutorial.md  loss.md  mediator.md  model.md  neuralnetworktutorial.md  node.md  observer.md  preprocess.md  propagator.md  view.md  visitor.md
examples/: CMakeLists.txt  alexnet.lua  (+14 more)
(+169 files in other folders)
