
CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)
IF(LUAROCKS_PREFIX)
    MESSAGE(STATUS "Installing Torch through Luarocks")
    STRING(REGEX REPLACE "(.*)lib/luarocks/rocks.*" "\\1" CMAKE_INSTALL_PREFIX  "${LUAROCKS_PREFIX}")
    MESSAGE(STATUS "Prefix inferred from Luarocks: ${CMAKE_INSTALL_PREFIX}")
ENDIF()
FIND_PACKAGE(Torch REQUIRED)

SET(src)
FILE(GLOB luasrc *.lua)
ADD_SUBDIRECTORY(data)
ADD_SUBDIRECTORY(examples)
ADD_SUBDIRECTORY(feedback)
ADD_SUBDIRECTORY(nn)
ADD_SUBDIRECTORY(observer)
ADD_SUBDIRECTORY(preprocess)
ADD_SUBDIRECTORY(sampler)
ADD_SUBDIRECTORY(propagator)
ADD_SUBDIRECTORY(scripts)
ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(utils)
ADD_SUBDIRECTORY(view)

ADD_TORCH_PACKAGE(dp "${src}" "${luasrc}")
